--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "jest": "^29.3.1",
     "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.21.2"
   }
 }
