--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.21.2"
+    "axios-mock-adapter": "^1.21.2",
+    "nock": "^13.2.9"
   }
 }
