--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll"
   },
   "dependencies": {
     "axios": "^1.2.2",
     "jest": "^29.3.1",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.21.2",
+    "msw": "^0.49.2",
     "nock": "^13.2.9"
   }
 }
